Update feature-extract method

--- a/feature-extract/embedding.ipynb
+++ b/feature-extract/embedding.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_df = content_df.merge(label_df, on='id')\n",
-    "train_df = df.dropna()"
+    "train_df = train_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = bert_client.encode(list(train_df.title.values))\n",
+    "# train_data = []\n",
+    "# for text in train_df.content.values:\n",
+    "#     train_data.append(bert_client.encode([text])[0])"
    ]
   },
   {
@@ -56,26 +68,23 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/bert_serving/client/__init__.py:299: UserWarning: some of your sentences have more tokens than \"max_seq_len=512\" set on the server, as consequence you may get less-accurate or truncated embeddings.\n",
-      "here is what you can do:\n",
-      "- disable the length-check by create a new \"BertClient(check_length=False)\" when you do not want to display this warning\n",
-      "- or, start a new server with a larger \"max_seq_len\"\n",
-      "  '- or, start a new server with a larger \"max_seq_len\"' % self.length_limit)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(7265, 768)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data = []\n",
-    "for text in train_df.content.values:\n",
-    "    train_data.append(bert_client.encode([text])[0])"
+    "train_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,36 +93,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/bert_serving/client/__init__.py:299: UserWarning: some of your sentences have more tokens than \"max_seq_len=512\" set on the server, as consequence you may get less-accurate or truncated embeddings.\n",
-      "here is what you can do:\n",
-      "- disable the length-check by create a new \"BertClient(check_length=False)\" when you do not want to display this warning\n",
-      "- or, start a new server with a larger \"max_seq_len\"\n",
-      "  '- or, start a new server with a larger \"max_seq_len\"' % self.length_limit)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_df = pd.read_csv('../data/Test_Dataset.csv')\n",
-    "test_data = []\n",
-    "for content in test_df.content.values:\n",
-    "    test_data.append(bert_client.encode([str(content)])[0])"
+    "title_data = []\n",
+    "for title in test_df.title.values:\n",
+    "    title_data.append(str(title))\n",
+    "test_data = bert_client.encode(title_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.DataFrame(test_data).to_csv('./test_word_vector.csv', header=None, index=None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
