Update feature extract

--- a/feature-extract/embedding.ipynb
+++ b/feature-extract/embedding.ipynb
@@ -43,23 +43,52 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7340, 4)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_df = content_df.merge(label_df, on='id')\n",
-    "train_df = train_df.dropna()"
+    "train_df = train_df.fillna('EMPTY')\n",
+    "train_df.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/bert_serving/client/__init__.py:290: UserWarning: server does not put a restriction on \"max_seq_len\", it will determine \"max_seq_len\" dynamically according to the sequences in the batch. you can restrict the sequence length on the client side for better efficiency\n",
+      "  warnings.warn('server does not put a restriction on \"max_seq_len\", '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7340, 768)\n"
+     ]
+    }
+   ],
    "source": [
     "train_data = bert_client.encode(list(train_df.title.values))\n",
-    "# train_data = []\n",
-    "# for text in train_df.content.values:\n",
-    "#     train_data.append(bert_client.encode([text])[0])"
+    "print(train_data.shape)\n",
+    "pd.DataFrame(train_data).to_csv('./train_title_word_vector.csv', header=None, index=None)"
    ]
   },
   {
@@ -68,49 +97,77 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(7265, 768)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7340, 768)\n"
+     ]
     }
    ],
    "source": [
-    "train_data.shape"
+    "train_data = bert_client.encode(list(train_df.content.values))\n",
+    "print(train_data.shape)\n",
+    "pd.DataFrame(train_data).to_csv('./train_content_word_vector.csv', header=None, index=None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.DataFrame(train_data).to_csv('./train_word_vector.csv', header=None, index=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7356, 3)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_df = pd.read_csv('../data/Test_Dataset.csv')\n",
-    "title_data = []\n",
-    "for title in test_df.title.values:\n",
-    "    title_data.append(str(title))\n",
-    "test_data = bert_client.encode(title_data)"
+    "test_df = test_df.fillna('EMPTY')\n",
+    "test_df.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7356, 768)\n"
+     ]
+    }
+   ],
    "source": [
-    "pd.DataFrame(test_data).to_csv('./test_word_vector.csv', header=None, index=None)"
+    "test_data = bert_client.encode(list(test_df.title.values))\n",
+    "print(test_data.shape)\n",
+    "pd.DataFrame(test_data).to_csv('./test_title_word_vector.csv', header=None, index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7356, 768)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_data = bert_client.encode(list(test_df.content.values))\n",
+    "print(test_data.shape)\n",
+    "pd.DataFrame(test_data).to_csv('./test_content_word_vector.csv', header=None, index=None)"
    ]
   },
   {
