--- a/feature-extract/main.ipynb
+++ b/feature-extract/main.ipynb
@@ -54,7 +54,7 @@
     "content_df = pd.read_csv('../data/Train_Dataset.csv')\n",
     "label_df = pd.read_csv('../data/Train_Dataset_Label.csv')\n",
     "train_df = content_df.merge(label_df, on='id')\n",
-    "train_df = train_df.dropna()"
+    "train_df = train_df.fillna('EMPTY')"
    ]
   },
   {
@@ -64,7 +64,10 @@
    "outputs": [],
    "source": [
     "test_df = pd.read_csv('../data/Test_Dataset.csv')\n",
-    "X_test = pd.read_csv('./test_word_vector.csv', header=None).values"
+    "test_df = test_df.fillna('EMPTY')\n",
+    "test_title_data = pd.read_csv('./test_title_word_vector.csv', header=None).values\n",
+    "test_content_data = pd.read_csv('./test_content_word_vector.csv', header=None).values\n",
+    "X_test = np.concatenate((test_title_data, test_content_data), axis=1)"
    ]
   },
   {
@@ -82,7 +85,9 @@
    ],
    "source": [
     "y = train_df['label'].values\n",
-    "X = pd.read_csv('./train_word_vector.csv', header=None).values\n",
+    "train_title_data = pd.read_csv('./train_title_word_vector.csv', header=None).values\n",
+    "train_content_data = pd.read_csv('./train_content_word_vector.csv', header=None).values\n",
+    "X = np.concatenate((train_title_data, train_content_data), axis=1)\n",
     "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "import keras\n",
@@ -94,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,11 +107,14 @@
      "output_type": "stream",
      "text": [
       "0\n",
+      "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
       "1\n",
       "2\n",
       "3\n",
       "4\n",
-      "0.6944105626599713\n"
+      "0.7619517665907752\n"
      ]
     }
    ],
@@ -123,7 +131,7 @@
     "    X_train, X_valid, y_train, y_valid = X[train_index], X[valid_index], y[train_index], y[valid_index]\n",
     "    \n",
     "    model = tf.keras.Sequential([\n",
-    "                tf.keras.layers.Dense(32, activation=tf.nn.relu, input_shape=(768,)),\n",
+    "                tf.keras.layers.Dense(32, activation=tf.nn.relu, input_shape=(768*2,)),\n",
     "                tf.keras.layers.Dense(32, activation=tf.nn.relu),\n",
     "                tf.keras.layers.Dense(3, activation='softmax')\n",
     "            ])\n",
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
