--- a/feature-extract/embedding.ipynb
+++ b/feature-extract/embedding.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -53,7 +53,7 @@
        "(7340, 4)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,12 +116,39 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/bert_serving/client/__init__.py:290: UserWarning: server does not put a restriction on \"max_seq_len\", it will determine \"max_seq_len\" dynamically according to the sequences in the batch. you can restrict the sequence length on the client side for better efficiency\n",
+      "  warnings.warn('server does not put a restriction on \"max_seq_len\", '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7340, 768)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data = bert_client.encode([content[-512:] for content in train_df.content.values])\n",
+    "print(train_data.shape)\n",
+    "pd.DataFrame(train_data).to_csv('./train_tail_word_vector.csv', header=None, index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "(7356, 3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,6 +195,25 @@
     "test_data = bert_client.encode(list(test_df.content.values))\n",
     "print(test_data.shape)\n",
     "pd.DataFrame(test_data).to_csv('./test_content_word_vector.csv', header=None, index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7356, 768)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_data = bert_client.encode([content[-512:] for content in test_df.content.values])\n",
+    "print(test_data.shape)\n",
+    "pd.DataFrame(test_data).to_csv('./test_tail_word_vector.csv', header=None, index=None)"
    ]
   },
   {
