--- a/feature-extract/nn.ipynb
+++ b/feature-extract/nn.ipynb
@@ -96,12 +96,12 @@
     "\n",
     "encoder = LabelEncoder()\n",
     "y = encoder.fit_transform(y)\n",
-    "y = keras.utils.np_utils.to_categorical(y)"
+    "y = keras.utils.np_utils.to_categorical(y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,16 +109,19 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "0.7524286238147625\n",
+      "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "0.768308944194999\n",
       "1\n",
-      "0.7335097913899172\n",
+      "0.7901359972328567\n",
       "2\n",
-      "0.7703976376027318\n",
+      "0.7844587716521886\n",
       "3\n",
-      "0.7716076420085853\n",
+      "0.7963991783422447\n",
       "4\n",
-      "0.7452948863136438\n",
-      "0.7546477162259281\n"
+      "0.7806028394263689\n",
+      "0.7839811461697315\n"
      ]
     }
    ],
@@ -132,64 +135,69 @@
     "score_list = []\n",
     "for index, (train_index, valid_index) in enumerate(kf.split(X, y)):\n",
     "    print(index)\n",
-    "    X_train, X_valid, y_train, y_valid = X[train_index], X[valid_index], y[train_index], y[valid_index]\n",
-    "    \n",
-    "#     inputs = tf.keras.Input(shape=(768 * 3,))\n",
-    "#     reshape = tf.keras.layers.Reshape((128, 18))(inputs)\n",
-    "#     h1 = tf.keras.layers.Conv1D(64, 3, activation='relu', input_shape=(128, 18))(reshape)\n",
-    "#     h2 = tf.keras.layers.Conv1D(64, 3, activation='relu')(h1)\n",
-    "#     p1 = tf.keras.layers.MaxPooling1D(pool_size=2)(h2)\n",
-    "#     h3 = tf.keras.layers.Conv1D(128, 3, activation='relu')(p1)\n",
-    "#     p2 = tf.keras.layers.MaxPooling1D(pool_size=2)(h3)\n",
+    "    temp_model = []\n",
+    "    temp_score = []\n",
+    "    for i in range(10):\n",
+    "        X_train, X_valid, y_train, y_valid = X[train_index], X[valid_index], y[train_index], y[valid_index]\n",
+    "#         inputs = tf.keras.Input(shape=(768 * 3,))\n",
+    "#         reshape = tf.keras.layers.Reshape((128, 18))(inputs)\n",
+    "#         h1 = tf.keras.layers.Conv1D(64, 3, activation='relu', input_shape=(128, 18))(reshape)\n",
+    "#         h2 = tf.keras.layers.Conv1D(64, 3, activation='relu')(h1)\n",
+    "#         p1 = tf.keras.layers.MaxPooling1D(pool_size=2)(h2)\n",
+    "#         h3 = tf.keras.layers.Conv1D(128, 3, activation='relu')(p1)\n",
+    "#         p2 = tf.keras.layers.MaxPooling1D(pool_size=2)(h3)\n",
     "\n",
-    "#     bilstm = tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64))(p2)\n",
+    "#         bilstm = tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64))(p2)\n",
     "\n",
-    "#     attention = tf.keras.layers.Dense(1, activation='tanh')(bilstm)\n",
-    "#     attention = tf.keras.layers.Flatten()(attention)\n",
-    "#     attention = tf.keras.layers.Activation('softmax')(attention)\n",
-    "#     attention = tf.keras.layers.RepeatVector(64 * 2)(attention)\n",
-    "#     attention = tf.keras.layers.Permute((2, 1))(attention)\n",
+    "#         attention = tf.keras.layers.Dense(1, activation='tanh')(bilstm)\n",
+    "#         attention = tf.keras.layers.Flatten()(attention)\n",
+    "#         attention = tf.keras.layers.Activation('softmax')(attention)\n",
+    "#         attention = tf.keras.layers.RepeatVector(64 * 2)(attention)\n",
+    "#         attention = tf.keras.layers.Permute((2, 1))(attention)\n",
     "\n",
-    "#     x = tf.keras.layers.multiply([bilstm, attention])\n",
-    "#     x = tf.keras.layers.Lambda(lambda xx: tf.keras.backend.sum(xx, axis=1))(x)\n",
+    "#         x = tf.keras.layers.multiply([bilstm, attention])\n",
+    "#         x = tf.keras.layers.Lambda(lambda xx: tf.keras.backend.sum(xx, axis=1))(x)\n",
     "\n",
-    "#     output = tf.keras.layers.Dense(3, activation='softmax')(x)\n",
-    "#     model = tf.keras.models.Model(inputs=inputs, outputs=output)\n",
+    "#         output = tf.keras.layers.Dense(3, activation='softmax')(x)\n",
+    "#         model = tf.keras.models.Model(inputs=inputs, outputs=output)\n",
     "\n",
-    "    inputs = tf.keras.Input(shape=(768 *3,))\n",
-    "    h1 = tf.keras.layers.Dense(128, activation='relu')(inputs)\n",
-    "    h2 = tf.keras.layers.Dense(128, activation='relu')(h1)\n",
+    "        inputs = tf.keras.Input(shape=(768 *3,))\n",
+    "        h1 = tf.keras.layers.Dense(128, activation='relu')(inputs)\n",
+    "        h2 = tf.keras.layers.Dense(128, activation='relu')(h1)\n",
     "\n",
-    "    h2 = tf.keras.layers.Reshape((1, 128))(h2)\n",
-    "    attention = tf.keras.layers.Dense(1, activation='tanh')(h2)\n",
-    "    attention = tf.keras.layers.Flatten()(attention)\n",
-    "    attention = tf.keras.layers.Activation('softmax')(attention)\n",
-    "    attention = tf.keras.layers.RepeatVector(2 * 64)(attention)\n",
-    "    attention = tf.keras.layers.Permute((2, 1))(attention)\n",
-    "    \n",
-    "    x = tf.keras.layers.multiply([h2, attention])\n",
-    "    x = tf.keras.layers.Lambda(lambda xx: tf.keras.backend.sum(xx, axis=1))(x)\n",
+    "        h2 = tf.keras.layers.Reshape((2, 64))(h2)\n",
+    "        attention = tf.keras.layers.Dense(1, activation='tanh')(h2)\n",
+    "        attention = tf.keras.layers.Flatten()(attention)\n",
+    "        attention = tf.keras.layers.Activation('softmax')(attention)\n",
+    "        attention = tf.keras.layers.RepeatVector(64)(attention)\n",
+    "        attention = tf.keras.layers.Permute((2, 1))(attention)\n",
     "\n",
-    "    x = tf.keras.layers.Dense(32, activation='relu')(x)\n",
-    "    output = tf.keras.layers.Dense(3, activation='softmax')(x)\n",
-    "    model = tf.keras.models.Model(inputs=inputs, outputs=output)\n",
-    "    \n",
-    "    model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['categorical_accuracy'])\n",
-    "    early_stop = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=5)\n",
-    "    model.fit(x=X_train, y=y_train, validation_data=(X_valid, y_valid), callbacks=[early_stop], batch_size=32, epochs=20, verbose=0)\n",
-    "    y_pred = model.predict(X_valid)\n",
-    "    y_valid = np.argmax(y_valid, axis=1)\n",
-    "    y_pred = np.argmax(y_pred, axis=1)\n",
-    "    valid_score = f1_score(y_valid, y_pred, average='macro')\n",
-    "    print(valid_score)\n",
-    "    model_list.append(model)\n",
-    "    score_list.append(valid_score)\n",
+    "        x = tf.keras.layers.multiply([h2, attention])\n",
+    "        x = tf.keras.layers.Lambda(lambda xx: tf.keras.backend.sum(xx, axis=1))(x)\n",
+    "\n",
+    "        x = tf.keras.layers.Dense(32, activation='relu')(x)\n",
+    "        output = tf.keras.layers.Dense(3, activation='softmax')(x)\n",
+    "        model = tf.keras.models.Model(inputs=inputs, outputs=output)\n",
+    "\n",
+    "        model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['categorical_accuracy'])\n",
+    "        early_stop = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=5)\n",
+    "        model.fit(x=X_train, y=y_train, validation_data=(X_valid, y_valid), callbacks=[early_stop], batch_size=32, epochs=20, verbose=0)\n",
+    "        y_pred = model.predict(X_valid)\n",
+    "        y_valid = np.argmax(y_valid, axis=1)\n",
+    "        y_pred = np.argmax(y_pred, axis=1)\n",
+    "        valid_score = f1_score(y_valid, y_pred, average='macro')\n",
+    "        temp_model.append(model)\n",
+    "        temp_score.append(valid_score)\n",
+    "    best_idx = np.argmax(temp_score)\n",
+    "    model_list.append(temp_model[best_idx])\n",
+    "    print(temp_score[best_idx])\n",
+    "    score_list.append(temp_score[best_idx])\n",
     "print(np.mean(score_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
