--- a/feature-extract/nn.ipynb
+++ b/feature-extract/nn.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -112,16 +112,22 @@
       "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "0.768308944194999\n",
+      "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:97: calling GlorotUniform.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:97: calling Orthogonal.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:97: calling Zeros.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "0.756492937997595\n",
       "1\n",
-      "0.7901359972328567\n",
-      "2\n",
-      "0.7844587716521886\n",
-      "3\n",
-      "0.7963991783422447\n",
-      "4\n",
-      "0.7806028394263689\n",
-      "0.7839811461697315\n"
+      "0.7704628362019962\n",
+      "2\n"
      ]
     }
    ],
@@ -137,7 +143,7 @@
     "    print(index)\n",
     "    temp_model = []\n",
     "    temp_score = []\n",
-    "    for i in range(10):\n",
+    "    for i in range(5):\n",
     "        X_train, X_valid, y_train, y_valid = X[train_index], X[valid_index], y[train_index], y[valid_index]\n",
     "#         inputs = tf.keras.Input(shape=(768 * 3,))\n",
     "#         reshape = tf.keras.layers.Reshape((128, 18))(inputs)\n",
@@ -166,7 +172,9 @@
     "        h2 = tf.keras.layers.Dense(128, activation='relu')(h1)\n",
     "\n",
     "        h2 = tf.keras.layers.Reshape((2, 64))(h2)\n",
-    "        attention = tf.keras.layers.Dense(1, activation='tanh')(h2)\n",
+    "        bilstm = tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(128))(h2)\n",
+    "        \n",
+    "        attention = tf.keras.layers.Dense(1, activation='tanh')(bilstm)\n",
     "        attention = tf.keras.layers.Flatten()(attention)\n",
     "        attention = tf.keras.layers.Activation('softmax')(attention)\n",
     "        attention = tf.keras.layers.RepeatVector(64)(attention)\n",
