--- a/ensemble/vote.ipynb
+++ b/ensemble/vote.ipynb
@@ -15,13 +15,14 @@
     }
    ],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
