--- a/ensemble/vote.ipynb
+++ b/ensemble/vote.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/pandas/compat/__init__.py:84: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -22,13 +13,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1eb4578f-867e-40b9-8916-76101ba977b8.csv\n",
+      "4dd1e81f-5279-4b04-a1cc-e2e752c5dad5.csv\n",
+      "fa3a3ddc-acc5-4cf8-9c9a-fadd18ae3f3b.csv\n",
+      "58d0cbcc-6267-4848-8418-cf9e8e77fae5.csv\n",
+      "6ccdc336-508e-4d24-8f80-283b11e78ee7.csv\n",
+      "57e317b5-1c9b-405d-b7ac-b0b7a4644c2d.csv\n",
+      "e24ff622-d7bd-4d42-9380-402eb928c949.csv\n"
+     ]
+    }
+   ],
    "source": [
     "path = '/Users/yitinglin/Downloads/submission'\n",
     "label_list = None\n",
     "for file_name in os.listdir(path):\n",
+    "    print(file_name)\n",
     "    df = pd.read_csv(os.path.join(path, file_name))\n",
     "    if label_list is None:\n",
     "        label_list = df['label'].values[:, np.newaxis]\n",
@@ -42,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
