--- a/feature-extract/nn.ipynb
+++ b/feature-extract/nn.ipynb
@@ -65,9 +65,9 @@
    "source": [
     "test_df = pd.read_csv('../data/Test_Dataset.csv')\n",
     "test_df = test_df.fillna('EMPTY')\n",
-    "test_title_data = pd.read_csv('./test_title_word_vector.csv', header=None).values\n",
-    "test_content_data = pd.read_csv('./test_content_word_vector.csv', header=None).values\n",
-    "test_tail_data = pd.read_csv('./test_tail_word_vector.csv', header=None).values\n",
+    "test_title_data = pd.read_csv('./bert-base/test_title_word_vector.csv', header=None).values\n",
+    "test_content_data = pd.read_csv('./bert-base/test_content_word_vector.csv', header=None).values\n",
+    "test_tail_data = pd.read_csv('./bert-base/test_tail_word_vector.csv', header=None).values\n",
     "X_test = np.concatenate((test_title_data, test_content_data, test_tail_data), axis=1)"
    ]
   },
@@ -86,9 +86,9 @@
    ],
    "source": [
     "y = train_df['label'].values\n",
-    "train_title_data = pd.read_csv('./train_title_word_vector.csv', header=None).values\n",
-    "train_content_data = pd.read_csv('./train_content_word_vector.csv', header=None).values\n",
-    "train_tail_data = pd.read_csv('./train_tail_word_vector.csv', header=None).values\n",
+    "train_title_data = pd.read_csv('./bert-base/train_title_word_vector.csv', header=None).values\n",
+    "train_content_data = pd.read_csv('./bert-base/train_content_word_vector.csv', header=None).values\n",
+    "train_tail_data = pd.read_csv('./bert-base/train_tail_word_vector.csv', header=None).values\n",
     "X = np.concatenate((train_title_data, train_content_data, train_tail_data), axis=1)\n",
     "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -109,25 +109,16 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:97: calling GlorotUniform.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:97: calling Orthogonal.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:97: calling Zeros.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "WARNING:tensorflow:From /Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/tensorflow/python/ops/math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "0.756492937997595\n",
+      "0.7741953435994132\n",
       "1\n",
-      "0.7704628362019962\n",
-      "2\n"
+      "0.7859194687205502\n",
+      "2\n",
+      "0.7703243923490498\n",
+      "3\n",
+      "0.7834628393250718\n",
+      "4\n",
+      "0.7835483360035811\n",
+      "0.7794900759995331\n"
      ]
     }
    ],
@@ -205,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
