--- a/feature-extract/nn.ipynb
+++ b/feature-extract/nn.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -109,16 +109,32 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "0.7741953435994132\n",
+      "0.5975266786782165\n",
       "1\n",
-      "0.7859194687205502\n",
+      "0.5575967144511238\n",
       "2\n",
-      "0.7703243923490498\n",
-      "3\n",
-      "0.7834628393250718\n",
+      "0.5356636282437143\n",
+      "3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/sklearn/metrics/classification.py:1437: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/sklearn/metrics/classification.py:1437: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5198632326518015\n",
       "4\n",
-      "0.7835483360035811\n",
-      "0.7794900759995331\n"
+      "0.5669043357333513\n",
+      "0.5555109179516415\n"
      ]
     }
    ],
@@ -136,6 +152,8 @@
     "    temp_score = []\n",
     "    for i in range(5):\n",
     "        X_train, X_valid, y_train, y_valid = X[train_index], X[valid_index], y[train_index], y[valid_index]\n",
+    "\n",
+    "\n",
     "#         inputs = tf.keras.Input(shape=(768 * 3,))\n",
     "#         reshape = tf.keras.layers.Reshape((128, 18))(inputs)\n",
     "#         h1 = tf.keras.layers.Conv1D(64, 3, activation='relu', input_shape=(128, 18))(reshape)\n",
@@ -158,30 +176,41 @@
     "#         output = tf.keras.layers.Dense(3, activation='softmax')(x)\n",
     "#         model = tf.keras.models.Model(inputs=inputs, outputs=output)\n",
     "\n",
-    "        inputs = tf.keras.Input(shape=(768 *3,))\n",
-    "        h1 = tf.keras.layers.Dense(128, activation='relu')(inputs)\n",
-    "        h2 = tf.keras.layers.Dense(128, activation='relu')(h1)\n",
     "\n",
-    "        h2 = tf.keras.layers.Reshape((2, 64))(h2)\n",
-    "        bilstm = tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(128))(h2)\n",
+    "#         inputs = tf.keras.Input(shape=(768 *3,))\n",
+    "#         h1 = tf.keras.layers.Dense(128, activation='relu')(inputs)\n",
+    "#         h2 = tf.keras.layers.Dense(128, activation='relu')(h1)\n",
+    "\n",
+    "#         h2 = tf.keras.layers.Reshape((2, 64))(h2)\n",
+    "#         bilstm = tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(128))(h2)\n",
     "        \n",
-    "        attention = tf.keras.layers.Dense(1, activation='tanh')(bilstm)\n",
-    "        attention = tf.keras.layers.Flatten()(attention)\n",
-    "        attention = tf.keras.layers.Activation('softmax')(attention)\n",
-    "        attention = tf.keras.layers.RepeatVector(64)(attention)\n",
-    "        attention = tf.keras.layers.Permute((2, 1))(attention)\n",
+    "#         attention = tf.keras.layers.Dense(1, activation='tanh')(bilstm)\n",
+    "#         attention = tf.keras.layers.Flatten()(attention)\n",
+    "#         attention = tf.keras.layers.Activation('softmax')(attention)\n",
+    "#         attention = tf.keras.layers.RepeatVector(64)(attention)\n",
+    "#         attention = tf.keras.layers.Permute((2, 1))(attention)\n",
     "\n",
-    "        x = tf.keras.layers.multiply([h2, attention])\n",
-    "        x = tf.keras.layers.Lambda(lambda xx: tf.keras.backend.sum(xx, axis=1))(x)\n",
+    "#         x = tf.keras.layers.multiply([h2, attention])\n",
+    "#         x = tf.keras.layers.Lambda(lambda xx: tf.keras.backend.sum(xx, axis=1))(x)\n",
     "\n",
+    "#         x = tf.keras.layers.Dense(32, activation='relu')(x)\n",
+    "#         output = tf.keras.layers.Dense(3, activation='softmax')(x)\n",
+    "#         model = tf.keras.models.Model(inputs=inputs, outputs=output)\n",
+    "\n",
+    "\n",
+    "        title_inputs = tf.keras.Input(shape=(768,))\n",
+    "        content_inputs = tf.keras.Input(shape=(768,))\n",
+    "        attention = tf.keras.layers.Attention()([title_inputs, content_inputs])\n",
+    "        x = tf.keras.layers.Flatten()(attention)\n",
     "        x = tf.keras.layers.Dense(32, activation='relu')(x)\n",
     "        output = tf.keras.layers.Dense(3, activation='softmax')(x)\n",
-    "        model = tf.keras.models.Model(inputs=inputs, outputs=output)\n",
+    "        model = tf.keras.models.Model(inputs=[title_inputs, content_inputs], outputs=output)\n",
     "\n",
     "        model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['categorical_accuracy'])\n",
     "        early_stop = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=5)\n",
-    "        model.fit(x=X_train, y=y_train, validation_data=(X_valid, y_valid), callbacks=[early_stop], batch_size=32, epochs=20, verbose=0)\n",
-    "        y_pred = model.predict(X_valid)\n",
+    "        model.fit([X_train[:, :768], X_train[:, 768: 768 * 2]], y_train, validation_data=([X_valid[:, :768], X_valid[:, 768: 768 * 2]], y_valid), callbacks=[early_stop], batch_size=32, epochs=20, verbose=0)\n",
+    "\n",
+    "        y_pred = model.predict([X_valid[:, :768], X_valid[:, 768: 768 * 2]])\n",
     "        y_valid = np.argmax(y_valid, axis=1)\n",
     "        y_pred = np.argmax(y_pred, axis=1)\n",
     "        valid_score = f1_score(y_valid, y_pred, average='macro')\n",
