--- a/ensemble/vote_2.ipynb
+++ b/ensemble/vote_2.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/pandas/compat/__init__.py:84: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -30,11 +21,9 @@
      "output_type": "stream",
      "text": [
       "roberta-wwm-ext_prob.csv\n",
-      "bert-base_label_prob.csv\n",
-      "bert-wwm_label_prob.csv\n",
-      "roberta-wwm-ext_label_prob.csv\n",
+      "roberta-wwm-ext_class_weight_label_prob.csv\n",
       "bert-wwm_prob.csv\n",
-      "bert-base_prob.csv\n"
+      "bert-wwm_class_weight_label_prob.csv\n"
      ]
     }
    ],
@@ -43,6 +32,12 @@
     "new_df = pd.DataFrame()\n",
     "for file_name in os.listdir(path):\n",
     "    if file_name.startswith('bert-wwm-ext'):\n",
+    "        continue\n",
+    "    if file_name.startswith('bert-base_bilstm_attention_label_prob'):\n",
+    "        continue\n",
+    "    if file_name.endswith('_label_prob.csv') and file_name.find('class_weight') < 0:\n",
+    "        continue\n",
+    "    if file_name.startswith('bert-base'):\n",
     "        continue\n",
     "    print(file_name)\n",
     "    df = pd.read_csv(os.path.join(path, file_name))\n",
@@ -63,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +80,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "0.775451488746136 0.7825331744393346 0.7840976829448384"
+   ]
   }
  ],
  "metadata": {
