--- a/ensemble/vote_2.ipynb
+++ b/ensemble/vote_2.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yitinglin/Projects/news-emotion-analysis/env/lib/python3.6/site-packages/pandas/compat/__init__.py:84: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -13,17 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "roberta-wwm-ext_prob.csv\n",
-      "roberta-wwm-ext_class_weight_label_prob.csv\n",
-      "bert-wwm_prob.csv\n",
-      "bert-wwm_class_weight_label_prob.csv\n"
+      "bert-base-preprocess_prob.csv\n"
      ]
     }
    ],
@@ -31,13 +37,19 @@
     "path = '/Users/yitinglin/Downloads/submission'\n",
     "new_df = pd.DataFrame()\n",
     "for file_name in os.listdir(path):\n",
+    "    if file_name == '.DS_Store':\n",
+    "        continue\n",
     "    if file_name.startswith('bert-wwm-ext'):\n",
+    "        continue\n",
+    "    if file_name.startswith('bert-wwm'):\n",
     "        continue\n",
     "    if file_name.startswith('bert-base_bilstm_attention_label_prob'):\n",
     "        continue\n",
-    "    if file_name.endswith('_label_prob.csv') and file_name.find('class_weight') < 0:\n",
+    "    if file_name.endswith('_label_prob.csv') and file_name.find('class_weight') > 0:\n",
     "        continue\n",
-    "    if file_name.startswith('bert-base'):\n",
+    "    if file_name.find('batch-16') > 0:\n",
+    "        continue\n",
+    "    if not (file_name == 'bert-base-preprocess_prob.csv'):\n",
     "        continue\n",
     "    print(file_name)\n",
     "    df = pd.read_csv(os.path.join(path, file_name))\n",
@@ -58,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
