--- a/ensemble/vote_2.ipynb
+++ b/ensemble/vote_2.ipynb
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bert-base-preprocess_prob.csv\n"
+      "roberta-wwm-large-ext_label_prob.csv\n"
      ]
     }
    ],
@@ -39,9 +39,9 @@
     "for file_name in os.listdir(path):\n",
     "    if file_name == '.DS_Store':\n",
     "        continue\n",
-    "    if file_name.startswith('bert-wwm-ext'):\n",
+    "    if file_name == 'bert-base-preprocess_prob.csv':\n",
     "        continue\n",
-    "    if file_name.startswith('bert-wwm'):\n",
+    "    if file_name.startswith('bert-wwm-ext'):\n",
     "        continue\n",
     "    if file_name.startswith('bert-base_bilstm_attention_label_prob'):\n",
     "        continue\n",
@@ -49,7 +49,7 @@
     "        continue\n",
     "    if file_name.find('batch-16') > 0:\n",
     "        continue\n",
-    "    if not (file_name == 'bert-base-preprocess_prob.csv'):\n",
+    "    if not (file_name == 'roberta-wwm-large-ext_label_prob.csv'):\n",
     "        continue\n",
     "    print(file_name)\n",
     "    df = pd.read_csv(os.path.join(path, file_name))\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
