--- a/ensemble/vote_2.ipynb
+++ b/ensemble/vote_2.ipynb
@@ -22,13 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "roberta-wwm-ext_prob.csv\n",
+      "bert-base_label_prob.csv\n",
+      "roberta-wwm-ext_label_prob.csv\n",
+      "roberta-wwm-large-ext-normal_prob.csv\n",
+      "bert-wwm-ext_label_prob.csv\n",
+      "bert-base_prob.csv\n",
       "roberta-wwm-large-ext_label_prob.csv\n"
      ]
     }
@@ -38,18 +44,6 @@
     "new_df = pd.DataFrame()\n",
     "for file_name in os.listdir(path):\n",
     "    if file_name == '.DS_Store':\n",
-    "        continue\n",
-    "    if file_name == 'bert-base-preprocess_prob.csv':\n",
-    "        continue\n",
-    "    if file_name.startswith('bert-wwm-ext'):\n",
-    "        continue\n",
-    "    if file_name.startswith('bert-base_bilstm_attention_label_prob'):\n",
-    "        continue\n",
-    "    if file_name.endswith('_label_prob.csv') and file_name.find('class_weight') > 0:\n",
-    "        continue\n",
-    "    if file_name.find('batch-16') > 0:\n",
-    "        continue\n",
-    "    if not (file_name == 'roberta-wwm-large-ext_label_prob.csv'):\n",
     "        continue\n",
     "    print(file_name)\n",
     "    df = pd.read_csv(os.path.join(path, file_name))\n",
@@ -70,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
