--- a/ensemble/vote_2.ipynb
+++ b/ensemble/vote_2.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "path = '/Users/yitinglin/Downloads/submission'\n",
+    "path = './submission'\n",
     "new_df = pd.DataFrame()\n",
     "for file_name in os.listdir(path):\n",
     "    if file_name == '.DS_Store':\n",
